--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "url": "https://github.com/htmlacademy-javascript/1176707-kekstagram-26/issues"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
     "browser-sync": "2.27.10",
-    "eslint": "8.15.0",
-    "eslint-config-htmlacademy": "5.1.2"
+    "eslint": "^8.20.0",
+    "eslint-config-htmlacademy": "5.1.2",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-react": "^7.30.1"
   },
   "license": "MIT",
-  "dependencies": {},
   "scripts": {
     "start": "browser-sync start --server --no-ui --files \"js/**/*.js\"",
     "lint": "eslint js/"
